--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>饿了么</title>
 </head>
-<body>
+<body style="margin:0;padding:0;">
     <div id="app"></div>
 </body>
 </html>
